--- a/vocab.yml
+++ b/vocab.yml
@@ -1121,6 +1121,7 @@
     pos: v
   -
     gr: φοβέω
+    gr_mp: φοβοῦμαι
     en: put to flight; terrify, frighten; (more commonly, mid./pass.) be afraid, be afraid of (+ acc; + inf)
     pos: v
   -
