Add a couple more middle forms to vocab.yml.

--- a/vocab.yml
+++ b/vocab.yml
@@ -1525,6 +1525,7 @@
     pos: v
   -
     gr: φυλάττω
+    gr_mp: φυλάττομαι
     en: guard, defend; wathc for; (mid.) be on one's guard, be on guard against (+ acc.)
     pos: v
 -
@@ -2236,6 +2237,7 @@
     pos: v
   -
     gr: ἀποδύω
+    gr_mp: ἀποδύομαι
     en: (act. and 1st aor.) strip off (someone else's armor or clothes); (mid. and 2nd aor.) take off (one's own clothes), undress
     pos: v
   -
