Add unit 9 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -121,3 +121,70 @@
     pf: πέξευγα
     pm: ~
     ap: ~
+-
+  name: Unit 05
+  unit: 5
+  pp:
+  -
+    pr: ἀκούω
+    fu: ἀκούσομαι
+    ao: ἤκουσα
+    pf: ἀκήκοα
+    pm: ~
+    ap: ἠκούσθην
+  -
+    pr: βλάπτω
+    fu: βλάψω
+    ao: ἔβλαψα
+    pf: βέβλαφα
+    pm: βέβλαμμαι
+    ap: ἐβλάβην or ἐβλάφθην
+  -
+    pr: κελεύω
+    fu: κελεύσω
+    ao: ἐκέλευσα
+    pf: κεκέλευκα
+    pm: κεκέλευσμαι
+    ap: ἐκελεύσθην
+  -
+    pr: τάττω
+    fu: τάξω
+    ao: ἔταξα
+    pf: τέταχα
+    pm: τέταγμαι
+    ap: ἐτάχθην
+  -
+    pr: δεῖ
+    fu: δεήσει
+    ao: ἐδέησε
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: δοκεῖ
+    fu: δόξει
+    ao: ἔδοξε
+    pf: ~
+    pm: δέδοκται
+    ap: ~
+  -
+    pr: ἔξεστι
+    fu: ἐξέσται
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: πρέπει
+    fu: ~
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: χρή
+    fu: χρήσται
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ~
