Fix a couple of errors in pp.yml.

--- a/pp.yml
+++ b/pp.yml
@@ -108,7 +108,7 @@
     pm: πέπεμμαι
     ap: ἐπέμθην
   -
-    pr: φέρw
+    pr: φέρω
     fu: οἴσω
     ao: ἤνεγκον or ἤνεγκα
     pf: ἐνήνοχα
@@ -122,8 +122,8 @@
     pm: ~
     ap: ~
 -
-  name: Unit 05
-  unit: 5
+  name: Unit 09
+  unit: 9
   pp:
   -
     pr: ἀκούω
