Add unit 10 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -188,3 +188,42 @@
     pf: ~
     pm: ~
     ap: ~
+-
+  name: Unit 10
+  unit: 10
+  pp:
+  -
+    pr: βάλλω
+    fu: βαλέω
+    ao: ἔβαλον
+    pf: βέβληκα
+    pm: βέβλημαι
+    ap: ἐβληθην
+  -
+    pr: εἰμί
+    fu: ἔσομαι
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ~
+  -
+    pr: εὑρίσκω
+    fu: εὑρησω
+    ao: ηὗρον
+    pf: ηὕρηκα
+    pm: ηὕρημαι
+    ap: ηὑρέθην
+  -
+    pr: πάσχω
+    fu: πείσομαι
+    ao: ἔπαθον
+    pf: πέπονθα
+    pm: ~
+    ap: ~
+  -
+    pr: πράττω
+    fu: πράξω
+    ao: ἔπραξα
+    pf: πέπραγα or πέπραχα
+    pm: πέπραγμαι
+    ap: ἐπάχθην
