Add unit 11 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -227,3 +227,119 @@
     pf: πέπραγα or πέπραχα
     pm: πέπραγμαι
     ap: ἐπάχθην
+-
+  name: Unit 11
+  unit: 11
+  pp:
+  -
+    pr: ἀποκτείνω
+    fu: ἀποκτενέω
+    ao: ἀπέκτεινα
+    pf: ἀπέκτονα
+    pm: ~
+    ap: ~
+  -
+    pr: βουλεύω
+    fu: βουλεύσω
+    ao: ἐβούλευσα
+    pf: βεβούλευκα
+    pm: βεβούλευμαι
+    ap: ἐβουλεύθην
+  -
+    pr: γυμνάζω
+    fu: γυμνάσω
+    ao: ἐγύνμασα
+    pf: γεγύμνακα
+    pm: γεγύμνασμαι
+    ap: ἐγυμνάσθην
+  -
+    pr: δικάζω
+    fu: δικάσω
+    ao: ἐδίκασα
+    pf: δεδίκακα
+    pm: δεδίκασμαι
+    ap: ἐδικάσθην
+  -
+    pr: κόπτω
+    fu: κόψω
+    ao: ἔκοψα
+    pf: -κέκοφα
+    pm: κέκομμαι
+    ap: -εκόπην
+  -
+    pr: παρασκευάζω
+    fu: παρασκευάσω
+    ao: παρεσκεύασα
+    pf: ~
+    pm: παρεσκεύασμαι
+    ap: παρεσκευάσθην
+  -
+    pr: πολιτεύω
+    fu: πολιτεύσω
+    ao: ἐπολίτευσα
+    pf: πεπολίτευκα
+    pm: πεπολίτευμαι
+    ap: ἐπολιτεύθην
+  -
+    pr: σπένδω
+    fu: σπείσω
+    ao: ἔσπεισα
+    pf: ~
+    pm: ἔσπεισμαι
+    ap: ~
+  -
+    pr: αἰσθάνομαι
+    fu: αἰσθήσομαι
+    ao: ᾐσθόμην
+    pf: ~
+    pm: ᾔσθημαι
+    ap: ~
+  -
+    pr: βούλομαι
+    fu: βουλήσομαι
+    ao: ~
+    pf: ~
+    pm: βεβούλημαι
+    ap: ἐβουλήθην
+  -
+    pr: γίγνομαι
+    fu: γενήσομαι
+    ao: ἐγενόμην
+    pf: γέγονα
+    pm: γεγένημαι
+    ap: ἐγενήθην
+  -
+    pr: ἔρχομαι
+    fu: ἐλεύσομαι
+    ao: ἦλθον
+    pf: ἐλήλυθα
+    pm: ~
+    ap: ~
+  -
+    pr: μάχομαι
+    fu: μαχέομαι
+    ao: ἐμαχεσάμην
+    pf: ~
+    pm: μεμάχημαι
+    ap: ~
+  -
+    pr: οἴομαι or οἶμαι
+    fu: οἰήσομαι
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ᾠήθην
+  -
+    pr: παρακελεύομαι
+    fu: παρακελεύσομαι
+    ao: παρκελευσάμην
+    pf: ~
+    pm: παρακεκέλευσμαι
+    ap: ~
+  -
+    pr: πυνθάνομαι
+    fu: πεύσομαι
+    ao: ἐπυθόμην
+    pf: ~
+    pm: πέπυσμαι
+    ap: ~
