Add unit 13 principal parts.

--- a/pp.yml
+++ b/pp.yml
@@ -311,7 +311,7 @@
   -
     pr: ἔρχομαι
     fu: ἐλεύσομαι
-    ao: ἦλθον
+    ao: ἦλθον (stem ἐλθ-)
     pf: ἐλήλυθα
     pm: ~
     ap: ~
@@ -343,3 +343,98 @@
     pf: ~
     pm: πέπυσμαι
     ap: ~
+-
+  name: Unit 13
+  unit: 13
+  pp:
+  -
+    pr: ἀδικέω
+    fu: ἀδικήσω
+    ao: ἠδίκησα
+    pf: ἠδίκηκα
+    pm: ἠδίκημαι
+    ap: ἠδικήθην
+  -
+    pr: αἱρέω
+    fu: αἱρήσω
+    ao: εἷλον (stem ἑλ-)
+    pf: ᾕρηκα
+    pm: ᾕρημαι
+    ap: ᾑρέθην
+  -
+    pr: ἀφικνέομαι
+    fu: ἀφίξομαι
+    ao: ἀφικόμην
+    pf: ~
+    pm: ἀφῖγμαι
+    ap: ~
+  -
+    pr: δέω
+    fu: δεήσω
+    ao: ἐδέησα
+    pf: δεδέηκα
+    pm: δεδέημαι
+    ap: ἐδεήθην
+  -
+    pr: δέομαι
+    fu: δεήσομαι
+    ao: ~
+    pf: ~
+    pm: ~
+    ap: ἐδεήθην
+  -
+    pr: δοκέω
+    fu: δόξω
+    ao: ἔδοξα
+    pf: ~
+    pm: δέδογμαι
+    ap: -εδόχθην
+  -
+    pr: κρατέω
+    fu: κρατήσω
+    ao: ἐκράτησα
+    pf: κεκράτηκα
+    pm: κεκράτημαι
+    ap: ἐκρατήθην
+  -
+    pr: νοσέω
+    fu: νοσήσω
+    ao: ἐνόσησα
+    pf: νενόσηκα
+    pm: ~
+    ap: ~
+  -
+    pr: οἰκέω
+    fu: οἰκήσω
+    ao: ᾤκησα
+    pf: ᾤκηκα
+    pm: ᾤκημαι
+    ap: ᾠκήθην
+  -
+    pr: ποιέω
+    fu: ποιήσω
+    ao: ἐποίησα
+    pf: πεποίηκα
+    pm: πεποίημαι
+    ap: ἐποιήθην
+  -
+    pr: φιλέω
+    fu: φιλήσω
+    ao: ἐφίλησα
+    pf: πεφίληκα
+    pm: πεηίλημαι
+    ap: ἐφιλήθην
+  -
+    pr: φοβέω
+    fu: φοβήσω
+    ao: ἐφόβησα
+    pf: ~
+    pm: πεφόβημαι
+    ap: ἐφοβήθην
+  -
+    pr: ὠφελέω
+    fu: ὠφελήσω
+    ao: ὠφέλησα
+    pf: ὠφέληκα
+    pm: ὠφέλημαι
+    ap: ὠφελήθην
