--- a/vocab.yml
+++ b/vocab.yml
@@ -936,7 +936,7 @@
     pos: v
   -
     gr: βούλομαι
-    en: want, desire wish (+ complementary inf.)
+    en: want, desire, wish (+ complementary inf.)
     pos: v
   -
     gr: γίγνομαι
